# Doer

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: .env.dev  .env.dev.example  .env.example  Dockerfile  pyproject.toml
backend/migrations/: base.py  env.py  script.py.mako
backend/migrations/versions/: 20250912_044330_user_table_added.py  20250912_050011_refresh_token_table_added.py  20250927_093934_todo_list_table_added.py  20250927_094302_todo_list_member_added.py  20250930_104416_todo_item_table_added.py  20251018_110357_journal_table_added.py
backend/src/: main.py
backend/src/applications/authentication/: mappers.py
backend/src/domains/authentication/: entities.py
backend/src/domains/shared/: base_domain_repository.py
backend/src/infrastructures/: exception_handler.py  fast_api.py
backend/src/infrastructures/authentication/: mappers.py
backend/src/infrastructures/common/: models.py  timestamp_mixin.py
backend/src/infrastructures/config/: settings.py
backend/src/infrastructures/db/: config.py
backend/src/infrastructures/hasher/: hash_service.py
backend/src/infrastructures/middleware/: auth_middleware.py
backend/src/infrastructures/token/: jwt_service.py
backend/src/shared/: exceptions.py  response.py
backend/src/shared/logger/: ansi_logger.py
backend/tests/: conftest.py
backend/tests/integration/authentication/: test_authentication_services_integration.py
backend/tests/unit/authentication/: test_auth_domain_service.py
backend/tests/unit/todo/: test_todo_list_domain_services.py
client/: Dockerfile  package.json  (+2 more)
(+95 files in other folders)
